--- a/css/master-template/common.less
+++ b/css/master-template/common.less
@@ -189,9 +189,8 @@ img.logo-image {
 }
 
 div#PH_Float_Menu {
-    @media @mobile {
-        position: absolute;
-    }
+    width: 100%;
+    height: 35px;
 }
 
 .float_menu_item {
@@ -685,7 +684,7 @@ div#PH_Footer-main {
     content: none;
 }
 
-#PH_Float_Menu #siteMenuBar .siteMenuContainer .flm_my_basket::after {
+.flm_my_basket::after {
     content     : 'Basket';
     width       : 60px;
     position    : static;
